--- a/src/main/resources/chat-channels.yml
+++ b/src/main/resources/chat-channels.yml
@@ -9,22 +9,22 @@ staff:
   permissions:
     access: "streamline.messaging.chats.staff.access"
     formatting: "streamline.messaging.chats.staff.formatting"
-  message: "&c&lSC &7(&e%streamline_user_server%&7) &9&l>> &c%this_message%"
+  message: "&c&lSC &d%streamline_user_formatted% &7(&e%streamline_user_server%&7) &9&l>> &c%this_message%"
 builders:
   type: ROOM
   permissions:
     access: "streamline.messaging.chats.builders.access"
     formatting: "streamline.messaging.chats.builders.formatting"
-  message: "&2&lB &7(&e%streamline_user_server%&7) &9&l>> &2%this_message%"
+  message: "&2&lB &d%streamline_user_formatted% &7(&e%streamline_user_server%&7) &9&l>> &2%this_message%"
 global:
   type: GLOBAL
   permissions:
     access: "streamline.messaging.chats.global.access"
     formatting: "streamline.messaging.chats.global.formatting"
-  message: "&3&lGLOBAL &7(&e%streamline_user_server%&7) &9&l>> &f%this_message%"
+  message: "&3&lGLOBAL &d%streamline_user_formatted% &7(&e%streamline_user_server%&7) &9&l>> &f%this_message%"
 local:
   type: LOCAL
   permissions:
     access: "streamline.messaging.chats.local.access"
     formatting: "streamline.messaging.chats.local.formatting"
-  message: "&3&lLOCAL &9&l>> &f%this_message%"
+  message: "&3&lLOCAL &d%streamline_user_formatted% &9&l>> &f%this_message%"
