--- a/src/main/resources/chat-channels.yml
+++ b/src/main/resources/chat-channels.yml
@@ -10,21 +10,37 @@ staff:
     access: "streamline.messaging.chats.staff.access"
     formatting: "streamline.messaging.chats.staff.formatting"
   message: "&c&lSC &d%streamline_user_formatted% &7(&e%streamline_user_server%&7) &9&l>> &c%this_message%"
+  view:
+    permission: "streamline.messaging.chats.staff.view"
+    toggle:
+      permission: "streamline.messaging.chats.staff.toggle"
 builders:
   type: ROOM
   permissions:
     access: "streamline.messaging.chats.builders.access"
     formatting: "streamline.messaging.chats.builders.formatting"
   message: "&2&lB &d%streamline_user_formatted% &7(&e%streamline_user_server%&7) &9&l>> &2%this_message%"
+  view:
+    permission: "streamline.messaging.chats.builders.view"
+    toggle:
+      permission: "streamline.messaging.chats.builders.toggle"
 global:
   type: GLOBAL
   permissions:
     access: "streamline.messaging.chats.global.access"
     formatting: "streamline.messaging.chats.global.formatting"
   message: "&3&lGLOBAL &d%streamline_user_formatted% &7(&e%streamline_user_server%&7) &9&l>> &f%this_message%"
+  view:
+    permission: "streamline.messaging.chats.global.view"
+    toggle:
+      permission: "streamline.messaging.chats.global.toggle"
 local:
   type: LOCAL
   permissions:
     access: "streamline.messaging.chats.local.access"
     formatting: "streamline.messaging.chats.local.formatting"
   message: "&3&lLOCAL &d%streamline_user_formatted% &9&l>> &f%this_message%"
+  view:
+    permission: "streamline.messaging.chats.local.view"
+    toggle:
+      permission: "streamline.messaging.chats.local.toggle"
