--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -6,6 +6,9 @@ errors:
     no-access: "&cYou do not have permissions to access that channel!"
 
 friends:
+  already:
+    friends: "&cYou are already friends with this user!"
+    not-friends: "&cYou are not this user's friend!"
   add: "%streamline_parse_%this_other%:::*/*streamline_user_formatted*/*% &ewas &aadded &eto &dyour &cfriend&7'&cs list&8!"
   remove: "%streamline_parse_%this_other%:::*/*streamline_user_formatted*/*% &ewas &cremoved &efrom &dyour &cfriend&7'&cs list&8!"
   list:
@@ -13,3 +16,7 @@ friends:
     entry:
       not-last: "&d%streamline_user_formatted% &7(&e%streamline_user_online%&7)%newline%"
       last: "&d%streamline_user_formatted% &7(&e%streamline_user_online%&7)"
+  invite:
+    timeout:
+      sender: "&dYour &efriend invite to &d%streamline_parse_%this_other%:::*/*streamline_user_formatted*/*% &ehas &c&lexpired&8!"
+      invited: "&eThe friend invite to &dyou &efrom &d%streamline_parse_%this_other%:::*/*streamline_user_formatted*/*% &ehas &c&lexpired&8!"
