--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'tv.quaint'
-version '1.3-SNAPSHOT'
+version '1.3A-SNAPSHOT'
 
 project.ext {
     def dir = layout.buildDirectory.dir('C:\\Users\\nitra\\Dropbox\\Streamline\\Project\\Streamline\\api\\build\\libs')
@@ -33,9 +33,36 @@ java {
     targetCompatibility = JavaVersion.VERSION_16
 }
 
+processResources {
+    doFirst {
+        def resourcesDir = sourceSets.main.output.resourcesDir
+        resourcesDir.mkdirs()
+        def contents = "plugin.class=tv.quaint.StreamlineMessaging\n" +
+                "plugin.id=streamline-messaging\n" +
+                "plugin.version=${version}\n" +
+                "plugin.requires=\n" +
+                "plugin.dependencies=\n" +
+                "plugin.description=Messaging Module for StreamlineCore.\n" +
+                "plugin.provider=Quaint\n" +
+                "plugin.license=Apache License 2.0"
+        new File(resourcesDir, "plugin.properties").text = contents
+    }
+}
+
 jar.enabled = false
 shadowJar {
     relocate 'com.github.stefvanschie.inventoryframework', 'com.dndcraft.quaint.crpified.inventoryframework'
+
+    manifest {
+        attributes 'Plugin-Class': 'tv.quaint.StreamlineMessaging'
+        attributes 'Plugin-Id': 'streamline-messaging'
+        attributes 'Plugin-Version': version
+        attributes 'Plugin-Requires': ''
+        attributes 'Plugin-Dependencies': ''
+        attributes 'Plugin-Description': 'Messaging Module for StreamlineCore.'
+        attributes 'Plugin-Provider': 'Quaint'
+        attributes 'Plugin-License': 'Apache License 2.0'
+    }
 
     destinationDirectory  = file("$rootDir/build/libs")
     archiveClassifier.set('')
