--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,12 @@
 
     <groupId>io.stream-lined</groupId>
     <artifactId>streamlinemessaging</artifactId>
-    <version>1.9.0</version>
+    <version>1.9.2</version>
     <packaging>jar</packaging>
 
     <name>StreamlineMessaging</name>
 
     <properties>
-        <java.version>16</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -28,7 +27,7 @@
     </pluginRepositories>
 
     <build>
-        <finalName>${project.name}</finalName>
+        <finalName>${project.name}-${project.version}</finalName>
 
         <resources>
             <resource>
@@ -49,8 +48,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -79,7 +78,6 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <finalName>${build.finalName}-${project.version}</finalName>
                             <outputDirectory>./compiled</outputDirectory>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
@@ -134,14 +132,14 @@
         <dependency>
             <groupId>com.github.server-utilities</groupId>
             <artifactId>thebase</artifactId>
-            <version>1.1.23</version>
+            <version>1.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <!-- Streamline API -->
         <dependency>
             <groupId>io.stream-lined</groupId>
             <artifactId>api</artifactId>
-            <version>2.0.3.0</version>
+            <version>2.0.3.2</version>
             <scope>provided</scope>
         </dependency>
         <!-- LuckPerms -->
@@ -185,7 +183,7 @@
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/Streamline-Essentials/StreamlineDiscord</url>
+            <url>https://maven.pkg.github.com/Streamline-Essentials/StreamlineMessaging</url>
         </repository>
     </distributionManagement>
 </project>
