--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,10 @@
 plugins {
-    id("java")
-    id("net.kyori.blossom") version "1.3.1"
-    id("com.github.johnrengelman.shadow") version "7.1.2"
+    id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-apply plugin: 'java'
-apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'net.kyori.blossom'
-
-group 'com.github.streamline-essentials'
-version '1.9.6'
+group properties['group']
+version properties['version']
 
 repositories {
     mavenCentral()
@@ -19,10 +14,21 @@ repositories {
 }
 
 dependencies {
-    compileOnly "net.luckperms:api:5.4"
+    // Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-    compileOnly("com.github.Streamline-Essentials.StreamlineCore:StreamlineCore-API:main-SNAPSHOT")
-    annotationProcessor("com.github.Streamline-Essentials.StreamlineCore:StreamlineCore-API:main-SNAPSHOT")
+    // LuckPerms
+    compileOnly 'net.luckperms:api:5.4'
+
+    // StreamlineCore
+    compileOnly 'com.github.streamline-essentials.StreamlineCore:StreamlineCore-API:main-SNAPSHOT'
+    annotationProcessor 'com.github.streamline-essentials.StreamlineCore:StreamlineCore-API:main-SNAPSHOT'
+
+    if (properties['include-bapi']) {
+        compileOnly 'com.github.streamline-essentials.StreamlineCore:StreamlineCore-BAPI:main-SNAPSHOT'
+        annotationProcessor 'com.github.streamline-essentials.StreamlineCore:StreamlineCore-BAPI:main-SNAPSHOT'
+    }
 }
 
 java {
@@ -32,20 +38,24 @@ java {
 
 shadowJar {
     manifest {
-        attributes 'Plugin-Class': 'tv.quaint.StreamlineMessaging'
-        attributes 'Plugin-Id': 'streamline-messaging'
-        attributes 'Plugin-Version': version
-        attributes 'Plugin-Requires': ''
-        attributes 'Plugin-Dependencies': ''
-        attributes 'Plugin-Description': 'Messaging Module for StreamlineCore.'
-        attributes 'Plugin-Provider': 'Quaint'
-        attributes 'Plugin-License': 'Apache License 2.0'
+        attributes 'Plugin-Class': rootProject.properties['plugin-class']
+        attributes 'Plugin-Id': rootProject.properties['plugin-id']
+        attributes 'Plugin-Version': rootProject.properties['version']
+        attributes 'Plugin-Requires': rootProject.properties['plugin-requires']
+        attributes 'Plugin-Dependencies': rootProject.properties['plugin-dependencies']
+        attributes 'Plugin-Description': rootProject.properties['plugin-description']
+        attributes 'Plugin-Provider': rootProject.properties['plugin-provider']
+        attributes 'Plugin-License': rootProject.properties['plugin-license']
     }
 
-//    archiveFileName = "$archiveBaseName-$archiveVersion.$archiveExtension"
-    archiveName = "$baseName-$version.$extension"
+    setArchiveFileName(archiveBaseName.get() + '-' + archiveVersion.get() + '.' + archiveExtension.get())
 }
 
 artifacts {
     archives shadowJar
+}
+
+wrapper {
+    gradleVersion = '8.6'
+    distributionType = Wrapper.DistributionType.BIN
 }
