--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 group = com.github.streamline-essentials
-version = 1.10.0
+version = 1.10.1
+name = StreamlineMessaging
 include-bapi = false
 
-plugin-class = host.plas.StreamlinMessaging
-plugin-id = streamline-messaging
-plugin-requires = ''
-plugin-dependencies = ''
-plugin-description = Messaging Module for StreamlineCore.
-plugin-provider = Drakify
-plugin-license = Apache License 2.0
+pf.class = host.plas
+pf.id = streamline-messaging
+pf.requires = none
+pf.dependencies = none
+pf.description = Messaging Module for StreamlineCore.
+pf.provider = Drakify
+pf.license = Apache License 2.0
